maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:109: error: type mismatch;
 found   : Unit
 required: plm.universe.Direction
  if (min==e) {
  ^